IHCL UI fixes - stars will not expand/shrink on touch/untouch list of people appreciated appears correctly with js for top:0 and left:0 ensuring perfect overlap on parent div || Also, parent container no-key-selected-mobile given position relative to ensure child within (list of people) can move as needed

--- a/web/assets/css/individual.css
+++ b/web/assets/css/individual.css
@@ -1032,7 +1032,7 @@ nav li a {
 }
 
 #ihcl-question-title{
-   font: 16px 'Open Sans Regular', 'Open Sans';
+    font: 16px 'Open Sans Regular', 'Open Sans';
 }
 
 .answer-box { margin: 18px 0 20.5%; }
@@ -3488,11 +3488,11 @@ textarea:-ms-input-placeholder { font: italic 12px 'Open Sans Light'; }
         height: 36px;
         border: 2px solid #388e3c;
     }
-    
+
     #ihcl-search-button{
         height: 36px;
     }
-    
+
     .people-list-box .no-key-selected {
         display: none !important;
     }
@@ -3503,6 +3503,7 @@ textarea:-ms-input-placeholder { font: italic 12px 'Open Sans Light'; }
         /*For OWEN (not IHCL), float: left;*/
         float: none;
         width: 200px;
+        position: relative !important;
     }
 
     .people-list-box .no-key-selected-mobile p{
@@ -3682,6 +3683,11 @@ textarea:-ms-input-placeholder { font: italic 12px 'Open Sans Light'; }
         right: 4px;
         bottom: 45px;
         top: 90%;
+    }
+
+    .rating-stars span:hover{
+        -webkit-transform: none;
+        transform: none;
     }
 
     /************************************* DASHBOARD MOBILE ******************************************/
@@ -4111,7 +4117,7 @@ textarea:-ms-input-placeholder { font: italic 12px 'Open Sans Light'; }
         float: right;
         font: 16px 'Open Sans SemiBold', 'Open Sans';
     }
-    
+
     .submit-popup-buttons button:nth-child(odd){
         color: #9e9e9e;
     }
@@ -4136,11 +4142,11 @@ textarea:-ms-input-placeholder { font: italic 12px 'Open Sans Light'; }
 
     /***************************** SURVEY_MOOD MOBILE ******************************/
     .mood-range div { width: 20%; }
-    
+
     /***************************** USERNAME MOBILE APP ******************************/
     /*For iPhones only; override the telephone blue color with white*/
     a[href^=tel] { color: inherit; text-decoration: none; }
-    
+
     .usernameapp{
         top: 0;
         right: 0;
@@ -4150,13 +4156,13 @@ textarea:-ms-input-placeholder { font: italic 12px 'Open Sans Light'; }
         text-align: right;
         width: 50%;
     }
-    
+
     .usernameapp p{
         color:#ffffff !important;
         font: 14px 'Open Sans Light', 'Open Sans';
         display: inline-block;
     }
-    
+
     .usernameapp span{
         color:#ffffff;
         font: 14px 'Open Sans Light', 'Open Sans';
